[gd_scene load_steps=4 format=3 uid="uid://ryhjnaoodtf1"]

[ext_resource type="Script" uid="uid://bdfcavj3itjbv" path="res://Scripts/LoginScreen.gd" id="1_rq3jd"]
[ext_resource type="Texture2D" uid="uid://bcfitytydoo36" path="res://Assets/Images/GUID/backgrounds/bg_menu.jpg" id="2_cojd6"]
[ext_resource type="Theme" uid="uid://dyqkx5or01raf" path="res://Resources/default.tres" id="3_c6tpx"]

[node name="LoginScreen" type="Node2D"]
script = ExtResource("1_rq3jd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cojd6")
expand_mode = 1
stretch_mode = 6

[node name="MainContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -190.0
offset_right = 300.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CanvasLayer/MainContainer"]
layout_mode = 2
theme = ExtResource("3_c6tpx")
theme_override_font_sizes/font_size = 36
text = "Mi Cuenta"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/MainContainer"]
layout_mode = 2
theme = ExtResource("3_c6tpx")
text = "Vincula tu cuenta para guardar tu progreso en la nube y jugar en múltiples dispositivos."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ButtonsContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GoogleLoginButton" type="Button" parent="CanvasLayer/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("3_c6tpx")
text = "Iniciar Sesión con Google"

[node name="AppleLoginButton" type="Button" parent="CanvasLayer/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("3_c6tpx")
text = "Iniciar Sesión con Apple"

[node name="ContinueOfflineButton" type="Button" parent="CanvasLayer/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("3_c6tpx")
theme_type_variation = &"ButtonYellow"
text = "Continuar sin Iniciar Sesión"

[node name="UserInfoContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProfilePicture" type="TextureRect" parent="CanvasLayer/MainContainer/UserInfoContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="UserName" type="Label" parent="CanvasLayer/MainContainer/UserInfoContainer"]
layout_mode = 2
theme = ExtResource("3_c6tpx")
theme_override_font_sizes/font_size = 24
text = "Nombre de Usuario"
horizontal_alignment = 1

[node name="UserEmail" type="Label" parent="CanvasLayer/MainContainer/UserInfoContainer"]
layout_mode = 2
theme = ExtResource("3_c6tpx")
text = "correo@ejemplo.com"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MainContainer/UserInfoContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LogoutButton" type="Button" parent="CanvasLayer/MainContainer/UserInfoContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_c6tpx")
text = "Cerrar Sesión"

[node name="SyncButton" type="Button" parent="CanvasLayer/MainContainer/UserInfoContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_c6tpx")
theme_type_variation = &"ButtonYellow"
text = "Sincronizar Ahora"

[node name="ContinueButton" type="Button" parent="CanvasLayer/MainContainer/UserInfoContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_c6tpx")
theme_type_variation = &"ButtonRed"
text = "Continuar"

[node name="LoadingContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LoadingLabel" type="Label" parent="CanvasLayer/LoadingContainer"]
layout_mode = 2
theme = ExtResource("3_c6tpx")
theme_override_font_sizes/font_size = 24
text = "Conectando..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/LoadingContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("3_c6tpx")
max_value = 1.0
step = 0.05
value = 0.5
show_percentage = false

[node name="CancelButton" type="Button" parent="CanvasLayer/LoadingContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_c6tpx")
text = "Cancelar"

[node name="ErrorContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ErrorContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ErrorTitle" type="Label" parent="CanvasLayer/ErrorContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_c6tpx")
theme_override_colors/font_color = Color(0.937255, 0.329412, 0.329412, 1)
theme_override_font_sizes/font_size = 24
text = "Error de Conexión"
horizontal_alignment = 1

[node name="ErrorMessage" type="Label" parent="CanvasLayer/ErrorContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_c6tpx")
text = "No se pudo establecer conexión con el servidor. Por favor, intenta nuevamente más tarde."
horizontal_alignment = 1
autowrap_mode = 3

[node name="CloseErrorButton" type="Button" parent="CanvasLayer/ErrorContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_c6tpx")
text = "Entendido"

[connection signal="pressed" from="CanvasLayer/MainContainer/ButtonsContainer/GoogleLoginButton" to="." method="_on_google_login_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/ButtonsContainer/AppleLoginButton" to="." method="_on_apple_login_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/ButtonsContainer/ContinueOfflineButton" to="." method="_on_continue_offline_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/UserInfoContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/UserInfoContainer/SyncButton" to="." method="_on_sync_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/UserInfoContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LoadingContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ErrorContainer/VBoxContainer/CloseErrorButton" to="." method="_on_close_error_button_pressed"]
